recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:3: error: '<-' expected but integer literal found.
  for(i<-& to 4)
              ^FourSquare:9: error: illegal start of simple expression
}
^